【Task】桌面飘窗显示keyong CPU大小 【TODO】【Bug】飘窗TextView文字无法变化

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,11 @@
         android:text="DJI安卓工具箱"
         android:onClick="quick_start"
         />
+
+    <Button
+        android:id="@+id/btn_window"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:text="显示悬浮窗"
+        />
 </LinearLayout>
